tests/fixtures/invalid/pow_dict_none.py
# Cannot call pow() with Dict[str, int], None
x = pow({"a": 1}, None)
